Fix 2 bugs in OOP HP implementation. Re-enable tests on Windows.

The re-entrancy flag was missing for PartitionAlloc and Oilpan hooks. There was
an extra call to AllocatorShimLogFree() in HookFree().

Change-Id: Ida86b9e0e3ba33679ba353baccd47f5fcf93685c
Bug: 813117
TBR: primiano@chromium.org
Reviewed-on: https://chromium-review.googlesource.com/924885
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537554}
Former-commit-id: 08f7783b4bd199ad17ec8f1d8a56978853d6b2dd